--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,12 +47,12 @@ jobs:
 
       - name: Lint with Flake8
         run: |
-          flake8 st_cytoscape tests examples --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 st_cytoscape tests examples --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
+          flake8 src/st_cytoscape tests examples --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 src/st_cytoscape tests examples --count --exit-zero --max-complexity=10 --statistics
 
       - name: Type check with Mypy
         run: |
-          mypy st_cytoscape
+          mypy src/st_cytoscape
 
   test:
     name: Test (Python ${{ matrix.python-version }})
