--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,40 @@ on:
   workflow_dispatch:
 
 jobs:
+  build:
+    name: Build package
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
+      - name: Build package
+        run: poetry build
+
+      - name: Upload distributions
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/
+
   code-quality:
     name: Code Quality Checks
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     permissions:
       contents: write
     steps:
@@ -26,14 +57,18 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: latest
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+
       - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+        run: poetry install
 
       - name: Format code with Black
-        run: |
-          black .
+        run: poetry run black .
 
       - name: Commit formatting changes
         run: |
@@ -50,17 +85,16 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Lint with Flake8
-        run: |
-          flake8 src/st_cytoscape tests examples --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 src/st_cytoscape tests examples --count --exit-zero --max-complexity=10 --statistics
+        run: poetry run flake8 src/st_cytoscape tests examples --count --select=E9,F63,F7,F82 --show-source --statistics
 
       - name: Type check with Mypy
-        run: |
-          mypy src/st_cytoscape
+        run: poetry run mypy src/st_cytoscape
 
   test:
     name: Test (Python ${{ matrix.python-version }})
+    needs: [build]
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
@@ -74,36 +108,39 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Download distributions
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist/
+
+      - name: Install package
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+          python -m pip install dist/*.whl
+          python -m pip install pytest
 
       - name: Run tests with pytest
-        run: |
-          pytest --verbose
+        run: pytest --verbose
 
   publish:
     name: Publish to PyPI
-    runs-on: ubuntu-latest
     needs: [code-quality, test]
-    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'
-    environment: pypi
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    environment:
+      name: pypi
+      url: https://pypi.org/p/st-cytoscape
     permissions:
       id-token: write
+
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: Download distributions
+        uses: actions/download-artifact@v4
         with:
-          python-version: '3.11'
-
-      - name: Install Poetry
-        run: pipx install poetry
-
-      - name: Build package
-        run: poetry build
+          name: dist
+          path: dist/
 
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
