--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,20 +108,21 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Download distributions
-        uses: actions/download-artifact@v4
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
         with:
-          name: dist
-          path: dist/
+          version: latest
+          virtualenvs-create: true
+          virtualenvs-in-project: true
 
-      - name: Install package
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install dist/*.whl
-          python -m pip install pytest
+      - name: Install dependencies
+        run: poetry install
+
+      - name: Install Playwright browsers
+        run: poetry run playwright install --with-deps chromium
 
       - name: Run tests with pytest
-        run: pytest --verbose
+        run: poetry run pytest --verbose
 
   publish:
     name: Publish to PyPI
