--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,21 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: src/st_cytoscape/frontend/package-lock.json
+
+      - name: Install frontend dependencies
+        run: npm ci
+        working-directory: src/st_cytoscape/frontend
+
+      - name: Build frontend
+        run: npm run build
+        working-directory: src/st_cytoscape/frontend
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -39,6 +54,12 @@ jobs:
         with:
           name: dist
           path: dist/
+
+      - name: Upload frontend build
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-build
+          path: src/st_cytoscape/frontend/build/
 
   code-quality:
     name: Code Quality Checks
@@ -65,7 +86,7 @@ jobs:
           virtualenvs-in-project: true
 
       - name: Install dependencies
-        run: poetry install
+        run: poetry install --with dev
 
       - name: Format code with Black
         run: poetry run black .
@@ -103,6 +124,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Download frontend build
+        uses: actions/download-artifact@v4
+        with:
+          name: frontend-build
+          path: src/st_cytoscape/frontend/build/
+
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
@@ -116,7 +143,7 @@ jobs:
           virtualenvs-in-project: true
 
       - name: Install dependencies
-        run: poetry install
+        run: poetry install --with dev
 
       - name: Install Playwright browsers
         run: poetry run playwright install --with-deps chromium
