--- a/src/streamlit_cytoscape/frontend/package.json
+++ b/src/streamlit_cytoscape/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "st-cytoscape",
+  "name": "streamlit-cytoscape",
   "version": "0.1.0",
   "private": true,
   "description": "description",
